2022-03-18  Philippe Normand  <pnormand@igalia.com>

        [GStreamer] Initial import of the GstWebRTC backend
        https://bugs.webkit.org/show_bug.cgi?id=236540

        Reviewed by Carlos Garcia Campos and Xabier Rodriguez-Calvar.

        Enable GstWebRTC by default if a recent-enough (>= 1.20) version is available.

        * Source/cmake/FindGStreamer.cmake:
        * Source/cmake/GStreamerChecks.cmake:
        * Source/cmake/GStreamerDefinitions.cmake:
        * Source/cmake/GStreamerDependencies.cmake:

2022-03-18  Carlos Garcia Campos  <cgarcia@igalia.com>

        Add a public build option for PDF.js
        https://bugs.webkit.org/show_bug.cgi?id=238023

        Reviewed by Michael Catanzaro.

        PDF.js increases the binary size of the library quite a bit, so embedders might want to disable it if they know
        they don't need PDF support at all.

        * Source/cmake/OptionsGTK.cmake:
        * Source/cmake/OptionsWPE.cmake:
        * Source/cmake/WebKitFeatures.cmake:

2022-03-17  Zan Dobersek  <zdobersek@igalia.com>

        [GTK][WPE] Also enable USE_TEXTURE_MAPPER_DMABUF alongside other DMABuf-related defines
        https://bugs.webkit.org/show_bug.cgi?id=238017

        Reviewed by Alejandro G. Castro.

        For the GTK port, define USE_TEXTURE_MAPPER_DMABUF alongside the
        dependencies and defines for DMABuf-backed ANGLE integration. This will
        enable usage of the DMABuf-based video sink in any GStreamer pipeline
        and subsequently display of the provided DMABuf objects. A comment is
        added to explain this should be covered by a separate configuration
        option on which USE_ANGLE_WEBGL should then depend.

        For the WPE port the define is also added but without conditions, just
        like it's done for the dependencies and the USE_LIBGBM define.

        * Source/cmake/OptionsGTK.cmake:
        * Source/cmake/OptionsWPE.cmake:

2022-03-17  Zan Dobersek  <zdobersek@igalia.com>
